[package]
name = "CLD-consensus"
description = "CLD consensus library"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap.workspace = true
async-channel.workspace = true
bincode.workspace = true
crossbeam-channel.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
indexmap.workspace = true
itertools.workspace = true
CLD-addresses.workspace = true
CLD-consensus-core.workspace = true
CLD-consensus-notify.workspace = true
CLD-consensusmanager.workspace = true
CLD-core.workspace = true
CLD-database.workspace = true
CLD-hashes.workspace = true
CLD-math.workspace = true
CLD-merkle.workspace = true
CLD-muhash.workspace = true
CLD-notify.workspace = true
CLD-pow.workspace = true
CLD-txscript.workspace = true
CLD-txscript-errors.workspace = true
CLD-utils.workspace = true
log.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
rayon.workspace = true
rocksdb.workspace = true
secp256k1.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
tokio.workspace = true

rand = { workspace = true, features = ["small_rng"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion.workspace = true
serde_json.workspace = true
flate2.workspace = true
rand_distr.workspace = true
CLD-txscript-errors.workspace = true
CLD-addresses.workspace = true

[[bench]]
name = "parallel_muhash"
harness = false

[[bench]]
name = "check_scripts"
harness = false

[features]
html_reports = []
devnet-prealloc = ["CLD-consensus-core/devnet-prealloc"]
