[package]
name = "CLD"
description = "CLD full node daemon"
keywords = ["CLD", "blockdag"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "CLD_lib"
crate-type = ["cdylib", "lib"]

[dependencies]
kaspa-alloc.workspace = true # This changes the global allocator for all of the next dependencies so should be kept first

CLD-addresses.workspace = true
CLD-addressmanager.workspace = true
CLD-consensus-core.workspace = true
CLD-consensus-notify.workspace = true
CLD-consensus.workspace = true
CLD-consensusmanager.workspace = true
CLD-core.workspace = true
CLD-database.workspace = true
CLD-grpc-server.workspace = true
CLD-hashes.workspace = true
CLD-index-processor.workspace = true
CLD-mining.workspace = true
CLD-notify.workspace = true
CLD-p2p-flows.workspace = true
CLD-perf-monitor.workspace = true
CLD-rpc-core.workspace = true
CLD-rpc-service.workspace = true
CLD-txscript.workspace = true
CLD-utils.workspace = true
CLD-utils-tower.workspace = true
CLD-utxoindex.workspace = true
CLD-wrpc-server.workspace = true

async-channel.workspace = true
cfg-if.workspace = true
clap.workspace = true
dhat = { workspace = true, optional = true }
dirs.workspace = true
futures-util.workspace = true
itertools.workspace = true
log.workspace = true
num_cpus.workspace = true
rand.workspace = true
rayon.workspace = true
rocksdb.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
workflow-log.workspace = true

toml = "0.8.10"
serde_with = "3.7.0"

[features]
heap = ["dhat", "CLD-alloc/heap"]
devnet-prealloc = ["CLD-consensus/devnet-prealloc"]
semaphore-trace = ["CLD-utils/semaphore-trace"]
