[package]
name = "CLD-consensus-core"
description = "CLD consensus core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
devnet-prealloc = []
wasm32-sdk = []
default = []

[dependencies]
arc-swap.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
faster-hex.workspace = true
futures-util.workspace = true
getrandom.workspace = true
itertools.workspace = true
js-sys.workspace = true
CLD-addresses.workspace = true
CLD-core.workspace = true
CLD-hashes.workspace = true
CLD-math.workspace = true
CLD-merkle.workspace = true
CLD-muhash.workspace = true
CLD-txscript-errors.workspace = true
CLD-utils.workspace = true
rand.workspace = true
secp256k1.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
criterion.workspace = true
bincode.workspace = true
wasm-bindgen-test.workspace = true
web-sys.workspace = true

[[bench]]
name = "serde_benchmark"
harness = false

[lints]
workspace = true
