[package]
name = "CLD-index-core"
description = "CLD index core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-channel.workspace = true
async-trait.workspace = true
derive_more.workspace = true
futures.workspace = true
CLD-consensus-core.workspace = true
CLD-hashes.workspace = true
CLD-notify.workspace = true
CLD-utils.workspace = true
log.workspace = true
paste.workspace = true
serde.workspace = true
thiserror.workspace = true
triggered.workspace = true

[dev-dependencies]
# parking_lot.workspace = true
# tokio = { workspace = true, features = ["rt", "macros"] }
# rand = {workspace = true,  features = [ "small_rng" ]}
