[package]
name = "CLD-rpc-core"
description = "CLD RPC core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
wasm32-sdk = [
    "CLD-consensus-client/wasm32-sdk",
    "CLD-consensus-wasm/wasm32-sdk"
]

[dependencies]
CLD-addresses.workspace = true
CLD-consensus-core.workspace = true
CLD-consensus-client.workspace = true
CLD-consensus-notify.workspace = true
CLD-consensus-wasm.workspace = true
CLD-core.workspace = true
CLD-hashes.workspace = true
CLD-index-core.workspace = true
CLD-math.workspace = true
CLD-mining-errors.workspace = true
CLD-notify.workspace = true
CLD-txscript.workspace = true
CLD-utils.workspace = true
CLD-rpc-macros.workspace = true

async-channel.workspace = true
async-trait.workspace = true
borsh.workspace = true
cfg-if.workspace = true
derive_more.workspace = true
downcast.workspace = true
faster-hex.workspace = true
hex.workspace = true
js-sys.workspace = true
log.workspace = true
paste.workspace = true
rand.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
smallvec.workspace = true
thiserror.workspace = true
uuid.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-serializer.workspace = true
workflow-wasm.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
