[package]
name = "CLD-wallet-core"
description = "CLD wallet library"
keywords = ["CLD", "wallet"]
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[features]
multi-user = []
wasm32-keygen = [
    # "kaspa-consensus-wasm/wasm32-types",
]
wasm32-core = [
    "CLD-consensus-wasm/wasm32-sdk",
    "CLD-consensus-core/wasm32-sdk",
    "CLD-wrpc-client/wasm32-sdk",
    "CLD-wrpc-wasm/wasm32-sdk",
    "CLD-wasm-core/wasm32-sdk",
]
wasm32-sdk = [
    "wasm32-core"
]
default = ["wasm32-sdk"]
# default = []

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
aes.workspace = true
ahash.workspace = true
argon2.workspace = true
async-channel.workspace = true
async-std.workspace = true
async-trait.workspace = true
base64.workspace = true
borsh.workspace = true
cfb-mode.workspace = true
cfg-if.workspace = true
chacha20poly1305.workspace = true
convert_case.workspace = true
crypto_box.workspace = true
dashmap.workspace = true
derivative.workspace = true
downcast.workspace = true
evpkdf.workspace = true
faster-hex.workspace = true
fixedstr.workspace = true
futures.workspace = true
heapless.workspace = true
hmac.workspace = true
itertools.workspace = true
js-sys.workspace = true
CLD-addresses.workspace = true
CLD-bip32.workspace = true
CLD-consensus-client.workspace = true
CLD-consensus-core.workspace = true
CLD-consensus-wasm.workspace = true
CLD-core.workspace = true
CLD-hashes.workspace = true
CLD-metrics-core.workspace = true
CLD-notify.workspace = true
CLD-rpc-core.workspace = true
CLD-txscript-errors.workspace = true
CLD-txscript.workspace = true
CLD-utils.workspace = true
CLD-wallet-keys.workspace = true
CLD-wallet-macros.workspace = true
CLD-wallet-pskt.workspace = true
CLD-wasm-core.workspace = true
CLD-wrpc-client.workspace = true
CLD-wrpc-wasm.workspace = true
md-5.workspace = true
pad.workspace = true
pbkdf2.workspace = true
rand.workspace = true
regex.workspace = true
ripemd.workspace = true
secp256k1.workspace = true
separator.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
serde.workspace = true
sha1.workspace = true
sha2.workspace = true
slugify-rs.workspace = true
sorted-insert.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-node.workspace = true
workflow-rpc.workspace = true
workflow-store.workspace = true
workflow-wasm.workspace = true
xxhash-rust.workspace = true
zeroize.workspace = true
indexed_db_futures.workspace = true

[dependencies.web-sys]
workspace = true
features = [
    'Storage',
    'Window',
    'IdbFactory',
    'IdbDatabase',
    'IdbOpenDbOptions',
    'IdbOpenDbRequest',
    'IdbTransaction',
    'IdbCursorDirection',
]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
home.workspace = true

[dev-dependencies]
hex-literal.workspace = true
serde_repr.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
